# GraoeGraoGFP

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ErrorBoundary.tsx
src/components/finance/: AddCardDialog.tsx  BalanceCard.tsx  BudgetOverview.tsx  CommandPalette.tsx  CreditCardAnalysis.tsx  InvoiceList.tsx  MonthSelector.tsx  MonthlyAnalysis.tsx  PendingWindow.tsx  SettingsPage.tsx  SmartInsightsWidget.tsx  TransactionForm.tsx  TransactionList.tsx
src/components/layout/: Header.tsx
src/components/onboarding/: OnboardingScreen.tsx  OnboardingTitleBar.tsx
src/components/ui/: animated-number.tsx  tabs.tsx
src/constants/: categoryColors.ts
src/desktop/: autostart.ts  env.ts  window.ts
src/hooks/: useFinanceStore.ts
src/i18n/: index.ts
src/i18n/locales/: en-US.ts  pt-BR.ts
src/lib/: backup.ts  export-csv.ts  finance-utils.ts  import-csv.ts  mock-data.ts  transaction-validation.ts
src/pages/: Index.tsx
src/types/: app-settings.ts  finance.ts
